--- a/style.css
+++ b/style.css
@@ -1,5 +1,34 @@
  body{
-    background-color: blueviolet;
+    background-color:whitesmoke;
     height: 100vh;
- 
+    user-select: none;
+    
 }
+h2{
+    font-size: 48px; 
+    font-family: poppins; 
+    padding-left: 8vw;
+}
+.nav-link{
+   color: #1b1b1b; 
+   font-family:Comforter Brush;
+   font-size: 88px; 
+   text-decoration:none; 
+   text-align: center;
+   
+}
+a:hover{
+    color: #000;
+}
+
+@media only screen and (max-width: 768px) {
+    
+    h2{
+        font-size:20px ;
+        padding-top:9vh;
+    }
+    
+  }
+
+
+ 
