--- a/style.css
+++ b/style.css
@@ -2,7 +2,8 @@
     background-color:whitesmoke;
     height: 100vh;
     user-select: none;
-    
+    color: #1b1b1b;
+    font-family: poppins; 
 }
 h2{
     font-size: 48px; 
@@ -17,38 +18,45 @@ h2{
    text-align: center;
    
 }
-a:hover{
+.nav-link :hover{
     color: #000;
-}
-
-.nav-item{
-    text-align: center;
 }
 
 @media only screen and (max-width: 768px) {
     
     h2{
-        font-size:12px ;
+        font-size:28px ;
     }
+  .navbar-nav{
+      display: inline-flex;
+     position:absolute;
+     left: 50%;
+     text-align: center;
+     position: absolute;
+     left: 50%;
+     transform: translatex(-50%);
     
   }
-
-
- 
-nav{
-    color: #1b1b1b;
 }
 
-.li .a{
-   font-size: 30px;
-   font-family: poppins;
-
-}
-p{
+ p{
     color: #1b1b1b;
 }
 .about{
     margin-top: 18vh;
-    margin-bottom: 40vh;
+    margin-bottom: 120px;
+}
+.section-heading{
+    padding-left: 8vw;
+}
+.navbar{
+    color: #1b1b1b;
 }
 
+.nav-link{
+color: #1b1b1b;
+}
+
+.carousel-inner{
+    color: #000;
+}
